@@ -183,6 +183,7 @@ Release 0.91.0 - Unreleased
    HBASE-3609  Improve the selection of regions to balance; part 2 (Ted Yu)
    HBASE-2939  Allow Client-Side Connection Pooling (Karthik Sankarachary)
    HBASE-3798  [REST] Allow representation to elide row key and column key
+   HBASE-2470  Add Scan.setTimeRange() support in Shell (Harsh J Chouraria)
 
   TASKS
    HBASE-3559  Move report of split to master OFF the heartbeat channel
